--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         
         <link rel="author" href="humans.txt">
         <link rel="stylesheet" href="css/style.css">
-        
+
         <script src="lib/angular/angular.min.js"></script>
         <script src="lib/angular/angular-route.min.js"></script>
+        <script src="lib/angular/angular-animate.min.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
     </head>
